# knowledge-ingestion

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
scripts/: smoke.py
src/knowledge_ingestion/: __init__.py  auth.py  config.py  embedding.py  healthz.py  metrics.py  proto.py  server.py
src/knowledge_ingestion/ingest/: __init__.py  chunker.py  pdf.py  sitemap.py  text.py  url.py
src/knowledge_ingestion/jobs/: __init__.py
src/knowledge_ingestion/store/: __init__.py
tests/: conftest.py  test_chunker.py  test_integration.py  test_parsers.py  test_proto.py
