[project]
name = "vocence-knowledge-ingestion"
version = "0.1.0"
description = "Per-agent RAG service for Vocence — PDF/URL/sitemap/text → embeddings → LanceDB → per-turn query"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Vocence" }]

dependencies = [
  "fastapi>=0.115,<0.120",
  "uvicorn[standard]>=0.32,<0.40",
  "pydantic>=2.8,<3.0",
  "python-multipart>=0.0.12,<1.0",      # PDF upload (multipart)
  "psutil>=5.9,<8.0",                    # /healthz RAM stats
  "prometheus-client>=0.21,<1.0",

  # Embedding — fastembed is a thin ONNX wrapper around BGE; no torch dep,
  # ~10× smaller install than sentence-transformers for the same model.
  "fastembed>=0.4,<1.0",
  "numpy>=1.26,<3.0",

  # Vector store — Apache 2.0, columnar, embedded (no separate process).
  "lancedb>=0.13,<1.0",
  "pyarrow>=17,<22",

  # Source parsers — kept lightweight on purpose. ``unstructured`` is the
  # heavyweight alternative for PDFs (better layout reconstruction) but
  # pulls in 2 GB of ML deps; we use ``pypdf`` for v1.
  "pypdf>=4.3,<7.0",
  "trafilatura>=1.12,<3.0",              # URL main-content extraction
  "httpx>=0.27,<1.0",                    # async URL fetching
  "lxml>=5.1,<7.0",                      # sitemap XML parsing
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.10,<2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
